zokrates_cli/examples/compile_errors/assembly/unallowed_type_in_assignment.zok
def main(bool a) {
    bool mut b = false;
    asm {
        b <-- a;
    }
}